2019-11-20  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.17.
	* doc/chopstx.texi (VERSION): 1.17.

	* chopstx-gnu-linux.c (chx_running): New.
	(chx_init_arch): Set RUNNING.

2019-11-19  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c (chx_running): New.
	(chx_init_arch): Set RUNNING.

	* chopstx.c (chx_init): Don't set RUNNING here.
	(chx_timer_expired): Use chx_running.
	(chx_systick_init, chx_exit, chx_mutex_unlock, chopstx_create)
	(chopstx_mutex_lock, chopstx_mutex_unlock, chopstx_cleanup_push)
	(chopstx_cleanup_pop, chopstx_exit, chopstx_cancel)
	(chopstx_testcancel, chopstx_setcancelstate, chx_proxy_init)
	(chopstx_poll, chopstx_setpriority): Likewise.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-gnu-linux.c (chx_systick_init_arch): Rename.
	(chx_interrupt_controller_init): Rename.
	* chopstx-cortex-m.c (chx_systick_init_arch): Rename.
	(chx_interrupt_controller_init): Rename.
	* chopstx.c (chx_systick_init): Use chx_systick_init_arch.
	(chx_init): Use chx_interrupt_controller_init.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_ready_pop): Check flag_sched_rr here.
	* chopstx-cortex-m.c (chx_sched) [__ARM_ARCH_6M__]: Use
	new interface of chx_ready_pop.
	(preempt,svc): Likewise.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c (ticks_to_usec): New.
	* chopstx-gnu-linux.c (ticks_to_usec): New.
	* chopstx.c (chx_snooze): Use ticks_to_usec.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* rules.mk (CSRC): Change the rule of entry*.c.
	* entry.c: It's only for Cortex-M, now.
	* entry-gnu-linux.c: New file.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* entry.c: Use chopstx-cortex-m.h.
	* chopstx.h (CHOPSTX_THREAD_SIZE): Move the definition to ...
	* chopstx-cortex-m.h (CHOPSTX_THREAD_SIZE): ... here.

2019-10-07  Jeremy Drake  <jeremy@drastrom.science>

	* mcu/usb-st-common.c (usb_lld_init): Move BTABLE initialization
	after clearing ISTR register.

2019-09-04  NIIBE Yutaka  <gniibe@fsij.org>
